# lang

./: Cargo.toml
.github/workflows/: rust.yml
src/: ast.rs  graph.rs  hir.rs  hir_to_mir.rs  lexer.rs  lib.rs  main.rs  mir.rs  mir_builder.rs  mir_passes.rs  ops.rs  parser.rs  position.rs  scope.rs  token.rs  type_resolver.rs
src/ast_to_hir/: expr.rs  mod.rs  stmt.rs  ty.rs
src/builder/: errors.rs  expr.rs  mod.rs  stmt.rs  ty.rs
src/error/: position.rs
src/errors/: mod.rs  parser.rs  position.rs
src/hir/: expr.rs  stmt.rs  visitor.rs
src/hir_passes/: mod.rs  type_resolver.rs  visitor.rs
src/mir/: basic_block.rs  block_id.rs  builder.rs  cfg.rs  const_folding.rs  display.rs  fun.rs  impls.rs  instr.rs  operand.rs  printer.rs  register.rs  term.rs  type.rs  value.rs  value_id.rs
src/mir_builder/: operand.rs  value.rs
src/mir_passes/: cfg.rs  copy_elimination.rs  dead_blocks.rs  dead_code.rs  remove_empty_blocks.rs  remove_trivial_phis.rs  remove_unreachable_blocks.rs  rename_blocks.rs  rename_operands.rs  sync_block_ids.rs  unreachable_blocks.rs  variables.rs
src/parser/: error.rs  errors.rs  expr.rs  mod.rs  parser.rs  stmt.rs  ty.rs  utils.rs
src/type_resolver/: error.rs  scope.rs
tests/: lexer.rs  parser.rs  type_resolver.rs
tests/lexer/: comments.lang  invalids.lang  keywords.lang  numerics.lang  single_chars.lang  two_chars.lang
tests/parser/: 01_basic_functions.lang  02_variable_declarations.lang  03_expressions.lang  04_if_statements.lang  05_loops.lang  06_return_statements.lang  07_blocks.lang  08_operator_precedence.lang  09_complex_valid.lang  10_missing_main.lang  11_break_outside_loop.lang  12_break_in_if_not_loop.lang  13_duplicate_function.lang  14_unexpected_eof.lang  15_missing_function_name.lang  16_missing_parens.lang  17_missing_semicolon.lang  18_invalid_expression.lang  19_unclosed_paren.lang  20_missing_if_condition.lang  21_missing_variable_name.lang  22_invalid_type.lang  23_unexpected_top_level.lang  24_return_no_semicolon.lang  (+6 more)
(+128 files in other folders)
