[package]
name = "lang"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
insta = { version = "1.43", features = ["glob", "yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
